Add colors to battery state in polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -173,6 +173,10 @@ format-charging-prefix = "CHR "
 format-discharging-prefix = "BAT "
 format-low-prefix = "LOW "
 format-full-prefix = "FUL "
+format-charging-prefix-foreground = ${colors.primary}
+format-discharging-prefix-foreground = ${colors.primary}
+format-low-prefix-foreground = ${colors.alert}
+format-full-prefix-foreground = ${colors.alert}
 
 label-charging = %percentage%%
 label-discharging = %percentage%%
