--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,8 +1,7 @@
 {
 	"$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 	"logo": {
-		"source": "~/.config/fastfetch/arch.png",
-		"height": 17,
+		"source": "~/.config/fastfetch/pokemon_logo.txt",
 	},
 	"display": {
 		"separator": " > ",
