--- a/i3/config
+++ b/i3/config
@@ -32,8 +32,7 @@ exec --no-startup-id firefox
 exec --no-startup-id discord
 
 # lock the screen on timeout
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork --ignore-empty-password --no-unlock-indicator -i ~/.config/i3/win-crash.png
 # run picom for transparency and blur
 exec --no-startup-id picom
 
