--- a/i3/config
+++ b/i3/config
@@ -60,7 +60,7 @@ bindsym $mod+F5 exec --no-startup-id brightnessctl set +10%
 bindsym $mod+Return exec kitty
 bindsym $mod+b exec firefox
 bindsym $mod+n exec discord
-bindsym $mod+m exec microsoft-edge-stable
+bindsym $mod+m exec chromium
 
 # kill focused window
 bindsym $mod+Shift+q kill
