--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 !ly/
 !icons/
 !gtk-3.0/
+!rofi/
 
 !godot/**
 !i3/**
@@ -34,6 +35,7 @@
 !ly/**
 !icons/**
 !gtk-3.0/**
+!rofi/**
 
 bash/.bash_history
 pokemon_logo.txt
