Update kitty look

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,21 +5,21 @@ font_family                 ProFont IIx Nerd Font Mono
 bold_font                   auto
 italic_font                 auto
 bold_italic_font            auto
-font_size                   14.0
+font_size                   17.0
 
 # Terminal Bell
-enable_audio_bell           no
+enable_audio_bell           yes 
 
 # Window Layout
 window_padding_width	    17
 background_opacity			0.7
 
 # Tabs
-tab_bar_style               powerline
-tab_bar_min_tabs            1
+tab_bar_style				powerline
+tab_bar_min_tabs            2
 tab_powerline_style         slanted
-tab_title_template          "{title[5:] if tab.active_exe == 'nvim' else tab.active_exe + ':' + title[title.rfind('/')+1:]}" 
-active_tab_title_template   "{title[5:] if tab.active_exe == 'nvim' else title}"
+tab_title_template          "{tab.active_exe}"
+active_tab_title_template   "{title}"
 active_tab_font_style       bold
 
 # Remote Control
