Use DejaVu Sans font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,7 @@
 include diff.conf
 
 # Fonts
-font_family                 ProFont IIx Nerd Font Mono
+font_family                 DejaVu Sans Mono
 bold_font                   auto
 italic_font                 auto
 bold_italic_font            auto
