Add transparency for discord

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,7 +1,5 @@
 backend = "glx";
 
-#inactive-opacity = 0.72;
-
 blur: {
 	method = "dual_kawase";
 	strength = 3.5;
@@ -12,5 +10,6 @@ blur: {
 
 opacity-rule = [
 	"100:class_g = 'i3lock'",
-	"90:class_g = 'kitty' && focused"
+	"90:class_g = 'kitty'",
+	"90:class_g = 'discord'"
 ]
