--- a/godot/editor_layouts.cfg
+++ b/godot/editor_layouts.cfg
@@ -1,18 +1,15 @@
 [lucas_layout]
 
-dock_1="Scene,Import"
 dock_1_selected_tab_idx=0
-dock_2="FileSystem"
 dock_2_selected_tab_idx=0
-dock_3="Inspector,Node,History"
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
-dock_closed=[]
-dock_split_1=0
+dock_closed=["History"]
+dock_split_1=-38
 dock_split_2=0
-dock_hsplit_1=301
-dock_hsplit_2=336
+dock_hsplit_1=340
+dock_hsplit_2=352
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -20,5 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/ui/", "res://scripts/trigger_areas/", "res://scripts/editor/", "res://scenes/", "res://scenes/ui/", "res://scenes/editor/", "res://assets/")
+dock_1="Scene,Import"
+dock_2="FileSystem"
+dock_3="Inspector,Node,History"
