Revert back from qutebrowser to firefox

--- a/i3/config
+++ b/i3/config
@@ -21,17 +21,15 @@ bindsym $mod+Shift+g gaps outer all set 0; gaps inner all set 0
 
 # assign workspaces to the apps
 assign [class="Godot"] 2
-assign [class="qutebrowser"] 3
+assign [class="firefox"] 3
 assign [class="discord"] 4
-for_window [class="qutebrowser" title="Spotify"] move to workspace 5
 
 # run apps on startup
 exec --no-startup-id polybar
 exec --no-startup-id dunst
 exec --no-startup-id kitty
+exec --no-startup-id firefox 
 exec --no-startup-id discord
-exec --no-startup-id qutebrowser
-exec --no-startup-id qutebrowser --target window https://open.spotify.com/
 
 # lock the screen on timeout
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork --ignore-empty-password --no-unlock-indicator -i ~/.config/i3/win-crash.png
@@ -59,9 +57,8 @@ bindsym $mod+F5 exec --no-startup-id brightnessctl set +10%
 
 # start apps
 bindsym $mod+Return exec kitty
-bindsym $mod+b exec qutebrowser 
+bindsym $mod+b exec firefox 
 bindsym $mod+n exec discord
-bindsym $mod+m exec qutebrowser --target window "https://open.spotify.com/"
 
 # kill focused window
 bindsym $mod+Shift+q kill
