Update picom for less resource use

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,8 +1,12 @@
 backend = "glx";
+vsync = false
+refresh-rate = 0
+use-damage = true
+fading = false
 
 blur: {
 	method = "dual_kawase";
-	strength = 7;
+	strength = 5;
 	background = false;
 	background-frame = false;
 	background-fixed = false;
@@ -11,5 +15,6 @@ blur: {
 opacity-rule = [
 	"100:class_g = 'i3lock'",
 	"80:class_g = 'kitty'",
+	"80:class_g = 'Firefox'",
 	"80:class_g = 'discord'"
 ]
