--- a/godot/editor_layouts.cfg
+++ b/godot/editor_layouts.cfg
@@ -2,7 +2,7 @@
 
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=["History"]
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
 dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/ui/", "res://scripts/trigger_areas/", "res://scripts/editor/", "res://scenes/", "res://scenes/ui/", "res://scenes/editor/", "res://assets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_1="Scene,Import"
 dock_2="FileSystem"
 dock_3="Inspector,Node,History"
