Update transparency & blur settings

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -6,15 +6,12 @@ fading = false
 
 blur: {
 	method = "dual_kawase";
-	strength = 5;
+	strength = 7;
 	background = false;
 	background-frame = false;
 	background-fixed = false;
 }
 
 opacity-rule = [
-	"100:class_g = 'i3lock'",
-	"80:class_g = 'kitty'",
-	"80:class_g = 'Firefox'",
-	"80:class_g = 'discord'"
+	"77:class_g = 'kitty'"
 ]
