--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -30,6 +30,10 @@ selection_foreground        none
 selection_background        none
 copy_on_select              yes
 
+# Cursor
+cursor_trail 				3
+cursor_trail_decay 			0.1 0.4
+
 # Keybinds
 map     ctrl+t              new_tab
 map     ctrl+shift+t        new_tab_with_cwd
