Change default cursor shape

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -31,6 +31,7 @@ selection_background        none
 copy_on_select              yes
 
 # Cursor
+cursor_shape				beam
 cursor_trail 				3
 cursor_trail_decay 			0.1 0.4
 
