--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include diff.conf
+include dracula.conf
 
 # Fonts
 font_family                 DejaVu Sans Mono
@@ -12,7 +12,7 @@ enable_audio_bell           yes
 
 # Window Layout
 window_padding_width	    17
-background_opacity			0.7
+background_opacity			1
 
 # Tabs
 tab_bar_style				powerline
