--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,9 @@
-include dracula.conf
-
 # Fonts
-font_family                 DejaVu Sans Mono
+font_family                 ProFont IIx Nerd Font Mono 
 bold_font                   auto
 italic_font                 auto
 bold_italic_font            auto
-font_size                   19.0
+font_size                   17.0
 
 # Terminal Bell
 enable_audio_bell           yes 
